--- a/tags.html
+++ b/tags.html
@@ -12,21 +12,21 @@
 		<meta name="robots" content="index, follow" />
 		<meta name="author" content="Jose Teneb" />
 		<meta name="description" content="" />
-        	<link href="http://joseteneb.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jose' log Full Atom Feed" />
+        	<link href="http://joseteneb.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jose' log Full Atom Feed" />
 		<link rel="shortcut icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
-		<!--[if lte IE 8]><script src="http://joseteneb.com/theme/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="http://joseteneb.com/theme/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="http://joseteneb.com/theme/css/ie8.css" /><![endif]-->		
+		<!--[if lte IE 8]><script src="http://joseteneb.github.io/theme/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="http://joseteneb.github.io/theme/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="http://joseteneb.github.io/theme/css/ie8.css" /><![endif]-->		
 	</head>
 	<body id="top">
 
 		<!-- Header -->
 			<header id="header">				
-				<a href="http://joseteneb.com" class="image avatar"><img class="" src="http://joseteneb.com/images/profile.jpg"></a>
+				<a href="http://joseteneb.github.io" class="image avatar"><img class="" src="http://joseteneb.github.io/images/profile.jpg"></a>
 				<h1><strong>Jose' log</strong><br>Comodorense desarrollador de cosas medio instalado en Dublin</h1>
 				<ul class="page-list">
-					<li><a href="http://joseteneb.com/archives.html">Archivo</a></li>
+					<li><a href="http://joseteneb.github.io/archives.html">Archivo</a></li>
 			          	<li><a href="pages/projects.html">Proyectos</a></li>
 			          	<li><a href="pages/about.html">Sobre el autor</a></li>
 		        </ul>
@@ -35,12 +35,12 @@
 		<!-- Main -->
 			<div id="main">
 
-    <h1>Tags for Jose' log</h1>        <li><a href="http://joseteneb.com/tag/5km.html">5km</a> (1)</li>
-        <li><a href="http://joseteneb.com/tag/first-certificate.html">first-certificate</a> (1)</li>
-        <li><a href="http://joseteneb.com/tag/fotos.html">fotos</a> (1)</li>
-        <li><a href="http://joseteneb.com/tag/islandia.html">islandia</a> (1)</li>
-        <li><a href="http://joseteneb.com/tag/metas2016.html">metas2016</a> (1)</li>
-        <li><a href="http://joseteneb.com/tag/proyectos.html">proyectos</a> (1)</li>
+    <h1>Tags for Jose' log</h1>        <li><a href="http://joseteneb.github.io/tag/5km.html">5km</a> (1)</li>
+        <li><a href="http://joseteneb.github.io/tag/first-certificate.html">first-certificate</a> (1)</li>
+        <li><a href="http://joseteneb.github.io/tag/fotos.html">fotos</a> (1)</li>
+        <li><a href="http://joseteneb.github.io/tag/islandia.html">islandia</a> (1)</li>
+        <li><a href="http://joseteneb.github.io/tag/metas2016.html">metas2016</a> (1)</li>
+        <li><a href="http://joseteneb.github.io/tag/proyectos.html">proyectos</a> (1)</li>
 
 			</div>
 
@@ -58,12 +58,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="http://joseteneb.com/theme/js/jquery.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/jquery.poptrox.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/skel.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/util.js"></script>
-			<!--[if lte IE 8]><script src="http://joseteneb.com/theme/js/ie/respond.min.js"></script><![endif]-->
-			<script src="http://joseteneb.com/theme/js/main.js"></script>
+			<script src="http://joseteneb.github.io/theme/js/jquery.min.js"></script>
+			<script src="http://joseteneb.github.io/theme/js/jquery.poptrox.min.js"></script>
+			<script src="http://joseteneb.github.io/theme/js/skel.min.js"></script>
+			<script src="http://joseteneb.github.io/theme/js/util.js"></script>
+			<!--[if lte IE 8]><script src="http://joseteneb.github.io/theme/js/ie/respond.min.js"></script><![endif]-->
+			<script src="http://joseteneb.github.io/theme/js/main.js"></script>
 	<script type="text/javascript">
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
