Generate Pelican site

--- a/en/tags.html
+++ b/en/tags.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Jose' log</title>
+		<title>Jose' logJose' log - Tags</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="robots" content="index, follow" />
 		<meta name="author" content="Jose Teneb" />
@@ -15,38 +15,35 @@
         	<link href="http://joseteneb.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jose' log Full Atom Feed" />
 		<link rel="shortcut icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
-		<!--[if lte IE 8]><script src="http://joseteneb.com/theme/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="http://joseteneb.com/theme/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="http://joseteneb.com/theme/css/ie8.css" /><![endif]-->		
+		<!--[if lte IE 8]><script src="http://joseteneb.com/en/../theme/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="http://joseteneb.com/en/../theme/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="http://joseteneb.com/en/../theme/css/ie8.css" /><![endif]-->		
 	</head>
 	<body id="top">
 
 		<!-- Header -->
 			<header id="header">				
-				<a href="http://joseteneb.com" class="image avatar"><img class="" src="http://joseteneb.com/images/profile.jpg"></a>
-				<h1><strong>Jose' log</strong><br>Patagonico, Desarrollador de cosas, ahora medio instalado en Dublin</h1>
+				<a href="http://joseteneb.com/en" class="image avatar"><img class="" src="http://joseteneb.com/images/profile.jpg"></a>
+				<h1><strong>Jose' log</strong><br>From Patagonia, Developer of things, now living in Dublin</h1>
 				<ul class="actions">
-							<li class="active"><a href="http://joseteneb.com/">Español</a></li>
-							<li><a href="http://joseteneb.com/en/">English</a></li>
+							<li><a href="http://joseteneb.com/">Español</a></li>
+							<li class="active"><a href="http://joseteneb.com/en/">English</a></li>
 				</ul>
 				<ul class="page-list">
-			            <li><a href="http://joseteneb.com/archives.html">Archivo</a></li>
-			            <li><a href="http://joseteneb.com/pages/projects.html">Proyectos</a></li>
-			            <li><a href="http://joseteneb.com/pages/about.html">Sobre el autor</a></li>
+			            <li><a href="http://joseteneb.com/en/archives.html">Archive</a></li>
+			            <li><a href="http://joseteneb.com/en/pages/about.html">About</a></li>
 		        </ul>
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
-<section>
-<header class="major">
-<h2>Categories for Jose' log</h2>
-</header>
-<ul>
-    <li><a href="http://joseteneb.com/category/metas.html">Metas</a></li>
-</ul>
-</section>
+    <h1>Tags for Jose' log</h1>        <li><a href="http://joseteneb.com/en/tag/5km.html">5km</a> (1)</li>
+        <li><a href="http://joseteneb.com/en/tag/first-certificate.html">first-certificate</a> (1)</li>
+        <li><a href="http://joseteneb.com/en/tag/goals2016.html">goals2016</a> (1)</li>
+        <li><a href="http://joseteneb.com/en/tag/islandia.html">islandia</a> (1)</li>
+        <li><a href="http://joseteneb.com/en/tag/photography.html">photography</a> (1)</li>
+        <li><a href="http://joseteneb.com/en/tag/projects.html">projects</a> (1)</li>
 
 			</div>
 
@@ -64,12 +61,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="http://joseteneb.com/theme/js/jquery.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/jquery.poptrox.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/skel.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/util.js"></script>
-			<!--[if lte IE 8]><script src="http://joseteneb.com/theme/js/ie/respond.min.js"></script><![endif]-->
-			<script src="http://joseteneb.com/theme/js/main.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/jquery.min.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/jquery.poptrox.min.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/skel.min.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/util.js"></script>
+			<!--[if lte IE 8]><script src="http://joseteneb.com/en/../theme/js/ie/respond.min.js"></script><![endif]-->
+			<script src="http://joseteneb.com/en/../theme/js/main.js"></script>
 	<script type="text/javascript">
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
