--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,46 +41,41 @@
 
 <article>
 	<header class="major">
-    	<h2>Hola!</h2>
+    	<h2>Contacto</h2>
     </header>
-    <section id="one">
-<p style="font-size: 1.3em; line-height: 1.8em;">Mi nombre es Jose, Desarrollador y Consultor Independiente viviendo en Dublin.<br>
-       Estoy siempre buscando nuevos desafiós, si queres hacerme una pregunta, pedirme más información, o hablar sobre un proyecto, por favor contactame vía <a href="mailto:contact@joseteneb.com">email</a>.
-    </p>
-    <ul class="actions">
-        <li><a href="pages/about.html" class="button">Leer más</a></li>
-    </ul>
-</section>
-
-<hr/>
-
-<section id="two">
-    <h2>Proyectos</h2>
+    <section id="three">
+    <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
     <div class="row">
-        <article class="6u 12u$(xsmall) work-item">
-            <a href="http://programafrida.net" target="_blank" class="image fit thumb" title="Programa Frida"><img src="http://joseteneb.com/images/thumbs/frida.jpg" alt="Programa Frida" /></a>
-            <h3>Programa Frida</h3>
-            <p>Worpdress + WP-API</p>
-        </article>
-        <article class="6u$ 12u$(xsmall) work-item">
-            <a href="http://chequeado.com" target="_blank" class="image fit thumb" title="Chequeado"><img src="http://joseteneb.com/images/thumbs/chequeado.png" alt="Chequeado" /></a>
-            <h3>Chequeado</h3>
-            <p>Worpdress</p>
-        </article>
-        <article class="6u 12u$(xsmall) work-item">
-            <a href="http://caminosdelavilla.org" target="_blank" class="image fit thumb" title="Caminos de la Villa"><img src="http://joseteneb.com/images/thumbs/caminosdelavilla.png" alt="Caminos de la villa" /></a>
-            <h3>Caminos de la villa</h3>
-            <p>Ushahidi/KohanaPHP</p>
-        </article>
-        <article class="6u$ 12u$(xsmall) work-item">
-            <a href="" class="image fit thumb"><img src="http://joseteneb.com/images/thumbs/talentados.png" alt="Talentados" /></a>
-            <h3>Talento Humano</h3>
-            <p>CakePHP + Phonegap</p>
-        </article>
+        <div class="8u 12u$(small)">
+            <form method="post" action="https://formspree.io/contact@joseteneb.com">
+                <div class="row uniform 50%">
+                    <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+                    <div class="6u$ 12u$(xsmall)"><input type="email" name="_replyto" id="email" placeholder="Email" /></div>
+                    <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+                </div>
+            </form>
+            <ul class="actions">
+                <li><input type="submit" value="Send" /></li>
+            </ul>
+        </div>
+        <div class="4u$ 12u$(small)">
+            <ul class="labeled-icons">
+                <li>
+                    <h3 class="icon fa-home"><span class="label">Address</span></h3>
+                    Rathmines, Dublin<br />
+                    Ireland
+                </li>
+                <!--<li>
+                    <h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
+                    000-000-0000
+                </li>-->
+                <li>
+                    <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+                    <a href="#">contact@joseteneb.com</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <!--<ul class="actions">
-        <li><a href="#" class="button">Full Portfolio</a></li>
-    </ul>-->
 </section>
 </article>
 
