--- a/404.html
+++ b/404.html
@@ -41,47 +41,10 @@
 
 <article>
 	<header class="major">
-    	<h2>Hola!</h2>
+    	<h2>Not Found</h2>
     </header>
-    <section id="one">
-<p style="font-size: 1.3em; line-height: 1.8em;">Mi nombre es Jose, Desarrollador y Consultor Independiente viviendo en Dublin.<br>
-       Estoy siempre buscando nuevos desafiós, si queres hacerme una pregunta, pedirme más información, o hablar sobre un proyecto, por favor contactame vía <a href="mailto:contact@joseteneb.com">email</a>.
-    </p>
-    <ul class="actions">
-        <li><a href="pages/about.html" class="button">Leer más</a></li>
-    </ul>
-</section>
-
-<hr/>
-
-<section id="two">
-    <h2>Proyectos</h2>
-    <div class="row">
-        <article class="6u 12u$(xsmall) work-item">
-            <a href="http://programafrida.net" target="_blank" class="image fit thumb" title="Programa Frida"><img src="http://joseteneb.com/images/thumbs/frida.jpg" alt="Programa Frida" /></a>
-            <h3>Programa Frida</h3>
-            <p>Worpdress + WP-API</p>
-        </article>
-        <article class="6u$ 12u$(xsmall) work-item">
-            <a href="http://chequeado.com" target="_blank" class="image fit thumb" title="Chequeado"><img src="http://joseteneb.com/images/thumbs/chequeado.png" alt="Chequeado" /></a>
-            <h3>Chequeado</h3>
-            <p>Worpdress</p>
-        </article>
-        <article class="6u 12u$(xsmall) work-item">
-            <a href="http://caminosdelavilla.org" target="_blank" class="image fit thumb" title="Caminos de la Villa"><img src="http://joseteneb.com/images/thumbs/caminosdelavilla.png" alt="Caminos de la villa" /></a>
-            <h3>Caminos de la villa</h3>
-            <p>Ushahidi/KohanaPHP</p>
-        </article>
-        <article class="6u$ 12u$(xsmall) work-item">
-            <a href="" class="image fit thumb"><img src="http://joseteneb.com/images/thumbs/talentados.png" alt="Talentados" /></a>
-            <h3>Talento Humano</h3>
-            <p>CakePHP + Phonegap</p>
-        </article>
-    </div>
-    <!--<ul class="actions">
-        <li><a href="#" class="button">Full Portfolio</a></li>
-    </ul>-->
-</section>
+    <p>The requested item could not be located. Perhaps you might want to check
+the <a href="/archives.html">Archives</a>?</p>
 </article>
 
 			</div>
