--- a/en/index.html
+++ b/en/index.html
@@ -15,24 +15,23 @@
         	<link href="http://joseteneb.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Jose' log Full Atom Feed" />
 		<link rel="shortcut icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
-		<!--[if lte IE 8]><script src="http://joseteneb.com/theme/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="http://joseteneb.com/theme/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="http://joseteneb.com/theme/css/ie8.css" /><![endif]-->		
+		<!--[if lte IE 8]><script src="http://joseteneb.com/en/../theme/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="http://joseteneb.com/en/../theme/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="http://joseteneb.com/en/../theme/css/ie8.css" /><![endif]-->		
 	</head>
 	<body id="top">
 
 		<!-- Header -->
 			<header id="header">				
-				<a href="http://joseteneb.com" class="image avatar"><img class="" src="http://joseteneb.com/images/profile.jpg"></a>
-				<h1><strong>Jose' log</strong><br>Patagonico, Desarrollador de cosas, ahora medio instalado en Dublin</h1>
+				<a href="http://joseteneb.com/en" class="image avatar"><img class="" src="http://joseteneb.com/images/profile.jpg"></a>
+				<h1><strong>Jose' log</strong><br>From Patagonia, Developer of things, now living in Dublin</h1>
 				<ul class="actions">
-							<li class="active"><a href="http://joseteneb.com/">Español</a></li>
-							<li><a href="http://joseteneb.com/en/">English</a></li>
+							<li><a href="http://joseteneb.com/">Español</a></li>
+							<li class="active"><a href="http://joseteneb.com/en/">English</a></li>
 				</ul>
 				<ul class="page-list">
-			            <li><a href="http://joseteneb.com/archives.html">Archivo</a></li>
-			            <li><a href="http://joseteneb.com/pages/projects.html">Proyectos</a></li>
-			            <li><a href="http://joseteneb.com/pages/about.html">Sobre el autor</a></li>
+			            <li><a href="http://joseteneb.com/en/archives.html">Archive</a></li>
+			            <li><a href="http://joseteneb.com/en/pages/about.html">About</a></li>
 		        </ul>
 			</header>
 
@@ -41,39 +40,39 @@
 
 <article>
 	<header class="major">
-    	<h2>Hola!</h2>
+    	<h2>Hello!</h2>
     </header>
     <section id="one">
-<p style="font-size: 1.3em; line-height: 1.8em;">Mi nombre es Jose, Desarrollador y Consultor Independiente viviendo en Dublin.<br>
-       Estoy siempre buscando nuevos desafiós, si queres hacerme una pregunta, pedirme más información, o hablar sobre un proyecto, por favor contactame vía <a href="mailto:contact@joseteneb.com">email</a>.
+    <p style="font-size: 1.3em; line-height: 1.8em;">My name is Jose, an Independent Developer & Consultant living in Dublin.<br>
+       I'm always looking for new challenges, if there is anything you would like to ask me, request more information, or talk about a project, plese get in touch via <a href="mailto:contact@joseteneb.com">email</a>.
     </p>
     <ul class="actions">
-        <li><a href="pages/about.html" class="button">Leer más</a></li>
+        <li><a href="pages/about.html" class="button">Read More</a></li>
     </ul>
 </section>
 
 <hr/>
 
 <section id="two">
-    <h2>Proyectos</h2>
+    <h2>Selected Projects</h2>
     <div class="row">
         <article class="6u 12u$(xsmall) work-item">
-            <a href="http://programafrida.net" target="_blank" class="image fit thumb" title="Programa Frida"><img src="http://joseteneb.com/images/thumbs/frida.jpg" alt="Programa Frida" /></a>
+            <a href="http://programafrida.net" target="_blank" class="image fit thumb" title="Programa Frida"><img src="http://joseteneb.com/en/../images/thumbs/frida.jpg" alt="Programa Frida" /></a>
             <h3>Programa Frida</h3>
             <p>Worpdress + WP-API</p>
         </article>
         <article class="6u$ 12u$(xsmall) work-item">
-            <a href="http://chequeado.com" target="_blank" class="image fit thumb" title="Chequeado"><img src="http://joseteneb.com/images/thumbs/chequeado.png" alt="Chequeado" /></a>
+            <a href="http://chequeado.com" target="_blank" class="image fit thumb" title="Chequeado"><img src="http://joseteneb.com/en/../images/thumbs/chequeado.png" alt="Chequeado" /></a>
             <h3>Chequeado</h3>
             <p>Worpdress</p>
         </article>
         <article class="6u 12u$(xsmall) work-item">
-            <a href="http://caminosdelavilla.org" target="_blank" class="image fit thumb" title="Caminos de la Villa"><img src="http://joseteneb.com/images/thumbs/caminosdelavilla.png" alt="Caminos de la villa" /></a>
+            <a href="http://caminosdelavilla.org" target="_blank" class="image fit thumb" title="Caminos de la Villa"><img src="http://joseteneb.com/en/../images/thumbs/caminosdelavilla.png" alt="Caminos de la villa" /></a>
             <h3>Caminos de la villa</h3>
             <p>Ushahidi/KohanaPHP</p>
         </article>
         <article class="6u$ 12u$(xsmall) work-item">
-            <a href="" class="image fit thumb"><img src="http://joseteneb.com/images/thumbs/talentados.png" alt="Talentados" /></a>
+            <a href="" class="image fit thumb"><img src="http://joseteneb.com/en/../images/thumbs/talentados.png" alt="Talentados" /></a>
             <h3>Talento Humano</h3>
             <p>CakePHP + Phonegap</p>
         </article>
@@ -100,12 +99,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="http://joseteneb.com/theme/js/jquery.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/jquery.poptrox.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/skel.min.js"></script>
-			<script src="http://joseteneb.com/theme/js/util.js"></script>
-			<!--[if lte IE 8]><script src="http://joseteneb.com/theme/js/ie/respond.min.js"></script><![endif]-->
-			<script src="http://joseteneb.com/theme/js/main.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/jquery.min.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/jquery.poptrox.min.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/skel.min.js"></script>
+			<script src="http://joseteneb.com/en/../theme/js/util.js"></script>
+			<!--[if lte IE 8]><script src="http://joseteneb.com/en/../theme/js/ie/respond.min.js"></script><![endif]-->
+			<script src="http://joseteneb.com/en/../theme/js/main.js"></script>
 	<script type="text/javascript">
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
