Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -44,7 +44,7 @@
 		<h2>Archives for Jose' log</h2>
 	</header>
 	<dl>
-	    <dt>01 Jan, 2016</dt>
+	    <dt>01 ene, 2016</dt>
 	    <dd><a href="http://joseteneb.com/metas-2016.html">Metas 2016</a></dd>
 	</dl>
 </article>
