--- a/en/archives.html
+++ b/en/archives.html
@@ -43,7 +43,7 @@
 		<h2>Archives for Jose' log</h2>
 	</header>
 	<dl>
-	    <dt>01 Jan, 2016</dt>
+	    <dt>01 ene, 2016</dt>
 	    <dd><a href="http://joseteneb.com/en/metas-2016.html">Goals 2016</a></dd>
 	</dl>
 </article>
